; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_rar_delete_filter.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_rar_delete_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RARFilter = type { %struct.RARFilter*, %struct.RARFilter* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.RARFilter*)* @rar_delete_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rar_delete_filter(%struct.RARFilter* %0) #0 {
  %2 = alloca %struct.RARFilter*, align 8
  %3 = alloca %struct.RARFilter*, align 8
  store %struct.RARFilter* %0, %struct.RARFilter** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.RARFilter*, %struct.RARFilter** %2, align 8
  %6 = icmp ne %struct.RARFilter* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %4
  %8 = load %struct.RARFilter*, %struct.RARFilter** %2, align 8
  %9 = getelementptr inbounds %struct.RARFilter, %struct.RARFilter* %8, i32 0, i32 1
  %10 = load %struct.RARFilter*, %struct.RARFilter** %9, align 8
  store %struct.RARFilter* %10, %struct.RARFilter** %3, align 8
  %11 = load %struct.RARFilter*, %struct.RARFilter** %2, align 8
  %12 = getelementptr inbounds %struct.RARFilter, %struct.RARFilter* %11, i32 0, i32 0
  %13 = load %struct.RARFilter*, %struct.RARFilter** %12, align 8
  %14 = call i32 @free(%struct.RARFilter* %13)
  %15 = load %struct.RARFilter*, %struct.RARFilter** %2, align 8
  %16 = call i32 @free(%struct.RARFilter* %15)
  %17 = load %struct.RARFilter*, %struct.RARFilter** %3, align 8
  store %struct.RARFilter* %17, %struct.RARFilter** %2, align 8
  br label %4

18:                                               ; preds = %4
  ret void
}

declare dso_local i32 @free(%struct.RARFilter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
